Implemented JavaFx and added basic interface